# src/auth/dto/auth-sns-login.dto.ts
@@ -1,7 +1,0 @@
-export interface AuthSnsLoginDto {
-  /**
-   * authCode.
-   *
-   */
-  snsAuthCode: string;
-}
