# src/sns-auth/types/sns-auth.strategy.interface.ts
@@ -1,0 +1,5 @@
+import { CreateUserDto } from 'src/users/dto/create-user.dto';
+
+export interface SnsAuthStrategy {
+  validate(snsAuthCode: string, snsAuthState: string): Promise<CreateUserDto>;
+}
