# src/swagger.json
@@ -69,12 +69,24 @@
           }
         ],
         "x-nestia-method": "POST"
-      },
+      }
+    },
+    "/users/{userId}": {
       "patch": {
         "tags": [
           "2 user"
         ],
-        "parameters": [],
+        "parameters": [
+          {
+            "name": "userId",
+            "in": "path",
+            "schema": {
+              "type": "number"
+            },
+            "description": "",
+            "required": true
+          }
+        ],
         "requestBody": {
           "description": "UpdateUserDto",
           "content": {
@@ -148,9 +160,7 @@
           }
         ],
         "x-nestia-method": "PATCH"
-      }
-    },
-    "/users/{userId}": {
+      },
       "get": {
         "tags": [
           "2 user"
@@ -172,7 +182,7 @@
             "content": {
               "application/json": {
                 "schema": {
-                  "$ref": "#/components/schemas/ResponseFormUserEntity"
+                  "$ref": "#/components/schemas/ResponseFormUserEntitynull"
                 }
               }
             },
@@ -222,7 +232,7 @@
         "x-nestia-method": "GET"
       }
     },
-    "/auth/kakao": {
+    "/auth/snsLogin": {
       "post": {
         "tags": [
           "auth"
@@ -232,7 +242,7 @@
           "content": {
             "application/json": {
               "schema": {
-                "$ref": "#/components/schemas/AuthSnsLoginDto"
+                "$ref": "#/components/schemas/SnsAuthDto"
               }
             }
           },
@@ -241,11 +251,11 @@
         },
         "responses": {
           "201": {
-            "description": "KakaoLogin",
+            "description": "access token and refresh token",
             "content": {
               "application/json": {
                 "schema": {
-                  "$ref": "#/components/schemas/KakaoLogin"
+                  "$ref": "#/components/schemas/ResponseFormAuthTokensDto"
                 }
               }
             },
@@ -254,7 +264,7 @@
         },
         "summary": "1-1 auth sns login",
         "description": "1-1 auth sns login.",
-        "x-nestia-namespace": "auth.kakao.kakaoLogin",
+        "x-nestia-namespace": "auth.snsLogin.snsLogin",
         "x-nestia-jsDocTags": [
           {
             "name": "tag",
@@ -269,7 +279,7 @@
             "name": "return",
             "text": [
               {
-                "text": "KakaoLogin",
+                "text": "access token and refresh token",
                 "kind": "text"
               }
             ]
@@ -288,7 +298,7 @@
             "type": "string",
             "description": "SNS ID. 소셜 로그인을 위한 고유 식별자입니다."
           },
-          "snsProvider": {
+          "snsAuthProvider": {
             "type": "string",
             "enum": [
               "KAKAO",
@@ -313,10 +323,15 @@
           },
           "phoneNumber": {
             "type": "string",
+            "nullable": true,
             "description": "사용자 전화번호."
           },
           "gender": {
             "type": "string",
+            "enum": [
+              "MALE",
+              "FEMALE"
+            ],
             "nullable": true,
             "description": "사용자 성별."
           }
@@ -324,7 +339,7 @@
         "nullable": false,
         "required": [
           "snsId",
-          "snsProvider",
+          "snsAuthProvider",
           "name",
           "email",
           "phoneNumber",
@@ -362,7 +377,7 @@
             "type": "string",
             "description": "SNS ID. 소셜 로그인을 위한 고유 식별자입니다."
           },
-          "snsProvider": {
+          "snsAuthProvider": {
             "type": "string",
             "enum": [
               "KAKAO",
@@ -396,6 +411,7 @@
           },
           "phoneNumber": {
             "type": "string",
+            "nullable": true,
             "description": "사용자 전화번호."
           },
           "nickname": {
@@ -407,6 +423,10 @@
           },
           "gender": {
             "type": "string",
+            "enum": [
+              "MALE",
+              "FEMALE"
+            ],
             "nullable": true,
             "description": "사용자 성별."
           },
@@ -443,7 +463,7 @@
         "required": [
           "id",
           "snsId",
-          "snsProvider",
+          "snsAuthProvider",
           "role",
           "email",
           "name",
@@ -460,9 +480,6 @@
       "UpdateUserDto": {
         "type": "object",
         "properties": {
-          "id": {
-            "type": "number"
-          },
           "name": {
             "type": "string",
             "maxLength": 150,
@@ -478,10 +495,15 @@
           },
           "phoneNumber": {
             "type": "string",
+            "nullable": true,
             "description": "사용자 전화번호."
           },
           "gender": {
             "type": "string",
+            "enum": [
+              "MALE",
+              "FEMALE"
+            ],
             "nullable": true,
             "description": "사용자 성별."
           },
@@ -503,10 +525,7 @@
             "description": "사용자 체중."
           }
         },
-        "nullable": false,
-        "required": [
-          "id"
-        ]
+        "nullable": false
       },
       "NOT_FOUND_USER": {
         "type": "object",
@@ -544,20 +563,187 @@
           "data"
         ]
       },
-      "AuthSnsLoginDto": {
+      "ResponseFormUserEntitynull": {
         "type": "object",
         "properties": {
-          "snsAuthCode": {
-            "type": "string",
-            "description": "authCode."
+          "result": {
+            "type": "boolean"
+          },
+          "code": {
+            "type": "number"
+          },
+          "data": {
+            "$ref": "#/components/schemas/UserEntity.Nullable"
           }
         },
         "nullable": false,
         "required": [
-          "snsAuthCode"
+          "result",
+          "code",
+          "data"
         ]
       },
-      "KakaoLogin": {
+      "UserEntity.Nullable": {
+        "type": "object",
+        "properties": {
+          "id": {
+            "type": "number",
+            "description": "사용자 ID. 데이터베이스에서 자동 생성됩니다."
+          },
+          "snsId": {
+            "type": "string",
+            "description": "SNS ID. 소셜 로그인을 위한 고유 식별자입니다."
+          },
+          "snsAuthProvider": {
+            "type": "string",
+            "enum": [
+              "KAKAO",
+              "NAVER",
+              "GOOGLE",
+              "APPLE"
+            ],
+            "description": "SNS 공급자. 사용자가 로그인하는데 사용한 SNS 플랫폼을 나타냅니다."
+          },
+          "role": {
+            "type": "string",
+            "enum": [
+              "ADMIN",
+              "USER",
+              "TEMPORARY_USER"
+            ],
+            "description": "사용자 역할. 사용자의 접근 권한을 나타냅니다."
+          },
+          "email": {
+            "type": "string",
+            "format": "email",
+            "maxLength": 150,
+            "minLength": 1,
+            "description": "사용자 이메일 주소."
+          },
+          "name": {
+            "type": "string",
+            "maxLength": 150,
+            "minLength": 1,
+            "description": "사용자 이름."
+          },
+          "phoneNumber": {
+            "type": "string",
+            "nullable": true,
+            "description": "사용자 전화번호."
+          },
+          "nickname": {
+            "type": "string",
+            "maxLength": 150,
+            "minLength": 1,
+            "nullable": true,
+            "description": "사용자 별명."
+          },
+          "gender": {
+            "type": "string",
+            "enum": [
+              "MALE",
+              "FEMALE"
+            ],
+            "nullable": true,
+            "description": "사용자 성별."
+          },
+          "belt": {
+            "type": "string",
+            "nullable": true,
+            "description": "사용자 벨트(경력 또는 등급을 나타내는 필드)."
+          },
+          "weight": {
+            "type": "number",
+            "nullable": true,
+            "description": "사용자 체중."
+          },
+          "status": {
+            "type": "string",
+            "enum": [
+              "ACTIVE",
+              "INACTIVE"
+            ],
+            "description": "사용자 상태. 활성, 비활성 등을 나타냅니다."
+          },
+          "createdAt": {
+            "type": "string",
+            "format": "date-time",
+            "description": "생성 시간. 데이터베이스에 엔티티가 처음 저장될 때 자동으로 설정됩니다."
+          },
+          "updatedAt": {
+            "type": "string",
+            "format": "date-time",
+            "description": "최종 업데이트 시간. 엔티티가 수정될 때마다 자동으로 업데이트됩니다."
+          }
+        },
+        "nullable": true,
+        "required": [
+          "id",
+          "snsId",
+          "snsAuthProvider",
+          "role",
+          "email",
+          "name",
+          "phoneNumber",
+          "nickname",
+          "gender",
+          "belt",
+          "weight",
+          "status",
+          "createdAt",
+          "updatedAt"
+        ]
+      },
+      "SnsAuthDto": {
+        "type": "object",
+        "properties": {
+          "snsAuthProvider": {
+            "type": "string",
+            "enum": [
+              "KAKAO",
+              "NAVER",
+              "GOOGLE",
+              "APPLE"
+            ],
+            "description": "snsProvider."
+          },
+          "snsAuthCode": {
+            "type": "string",
+            "description": "authCode."
+          },
+          "snsAuthState": {
+            "type": "string",
+            "description": "snsAuthState.\nCross-Site Request Forgery(CSRF) 공격으로부터 카카오 로그인 요청을 보호하기 위해 사용.\n각 사용자의 로그인 요청에 대한 state 값은 고유해야 함.\n인가 코드 요청, 인가 코드 응답, 토큰 발급 요청의 state 값 일치 여부로 요청 및 응답 유효성 확인 가능."
+          }
+        },
+        "nullable": false,
+        "required": [
+          "snsAuthProvider",
+          "snsAuthCode",
+          "snsAuthState"
+        ]
+      },
+      "ResponseFormAuthTokensDto": {
+        "type": "object",
+        "properties": {
+          "result": {
+            "type": "boolean"
+          },
+          "code": {
+            "type": "number"
+          },
+          "data": {
+            "$ref": "#/components/schemas/AuthTokensDto"
+          }
+        },
+        "nullable": false,
+        "required": [
+          "result",
+          "code",
+          "data"
+        ]
+      },
+      "AuthTokensDto": {
         "type": "object",
         "properties": {
           "accessToken": {
