# src/users/dto/create-user.dto.ts
@@ -2,5 +2,5 @@ import { UserEntity } from '../entities/user.entity';
 
 export type CreateUserDto = Pick<
   UserEntity,
-  'snsId' | 'snsProvider' | 'name' | 'email' | 'phoneNumber' | 'gender'
+  'snsId' | 'snsAuthProvider' | 'name' | 'email' | 'phoneNumber' | 'gender'
 >;
